[package]

name = "compress"
description = "Various compression algorithms written in rust"
repository = "https://github.com/alexcrichton/rust-compress"
version = "0.1.2"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Dzmitry Malyshau <kvarkus@gmail.com>"]
license = "MIT/Apache-2.0"

[features]
default = ["zlib"]
bwt = []
checksum = []
entropy = []
flate = []
lz4 = []
zlib = ["flate", "checksum"]
rle = []
unstable = []

[[bin]]
name = "compress"
doc = false

[dependencies]
log = "0.3"
num = { version = "0.1", optional = true }
rand = "0.3"
byteorder = "0.4"
